--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
+    "@reduxjs/toolkit": "^1.9.2",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-safe-area-context": "^4.5.0",
